[package]
    name = "rotorlib"
    version = "0.7.0"
    authors = ["XenoCorn"]
    edition = "2018"
    description = "Client library for my message queue pet project."
    license = "BSD-3-Clause"
    readme = "README.md"
    repository = "https://github.com/xenocorn/rotorlib_rust"

[dependencies]
    tokio = { version = "1", features = ["rt", "net", "sync", "macros"] }
    tokio-tungstenite = { version = "0.14", features = ["native-tls"]}
    hyper = { version = "0.14", features = ["full"] }
    hyper-tls = "0.5"
    http = "0.2"
    url = "2.2"
    futures = "0.3"
    md5 = "0.7"
